# product-quantization

./: CMakeLists.txt  README.md
contrib/surf/: ipoint.h
contrib/yael/: CMakeLists.txt  Makefile  cscope.out  kmeans.c  tags
imgs/.svn/: all-wcprops  entries
src/: CMakeLists.txt  config.c  config.h  database.cpp  database.h  dataset.cpp  dataset.h  drawkeypoint.cpp  extracter.cpp  extracter.h  extracter_main.cpp  featureflfmt.h  filter.cpp  main.cpp  model.cpp  model.h  pqsearchengine.cpp  pqsearchengine.h  stablizer.conf  stablizer.cpp  stablizer.h  stablizer_main.cpp  train_main.cpp  types.h  util.h
test/: CMakeLists.txt  Makefile  a.out  ivec_sort.cpp  pqsearchengine.bk  testarray.c  testextracter.cpp
