cmake_minimum_required(VERSION 2.8)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/contrib/surf)
INCLUDE_DIRECTORIES("/usr/include/opencv")
SET(BIN_SRC testextracter.cpp)
SET(IVEC_SRC ivec_sort.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin/)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib )
PKGCONFIG(opencv cvIncludeDir cvLibdir cvLinkflags cvFlags)
INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIRS} ${cvIncludeDir})
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib ${OPENCV_LIBRARY_DIRS} ${cvLibdir})
#ADD_EXECUTABLE(testextracter ${BIN_SRC})
ADD_EXECUTABLE(testivec ${IVEC_SRC})
#TARGET_LINK_LIBRARIES(testextracter surf ${OPENCV_LIBRARIES} ${cvLinkflags})
TARGET_LINK_LIBRARIES(testivec yael )

#SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
ADD_DEFINITIONS(${cvFlags})
ADD_DEFINITIONS("-g")
